--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,12 @@
 span {
-  padding-right: 1em;
+  margin-right: 1em;
+  font-size: 3em;
+}
+
+section {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
